Sonar issues. - Make PropertyInclusion NON_NULL for general ObjectMapper - Remove complexity in media extension check. Impossible to produces non-array nodes. Makes code cleaner.